KVH/mykvh/Email-to-anything/objects/Business_Unit__c.object
<CustomObject>
    <description>Business Unit</description>
    <fields>
        <fullName>Allow_All_From_Addresses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow all OWEA from addresses</description>
        <inlineHelpText>If checked, all organisation wide email from-addresses will be available in the mail editor for this business unit. If unchecked, only Allowed From-Addresses for this business unit will be available.</inlineHelpText>
        <label>Allow All From-Addresses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_BCC_Deselect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow BCC deselect</description>
        <inlineHelpText>If checked, users may deselect Default BCC in the email editor. If unchecked, the Default Bcc for this business may not be deselected in the email editor, making it mandatory.</inlineHelpText>
        <label>Allow BCC Deselect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Busines_Unit_Title__c</fullName>
        <label>Busines Unit Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_BCC_Address__c</fullName>
        <description>Default BCC address</description>
        <inlineHelpText>Default BCC address for emails sent using the email editor for this business unit</inlineHelpText>
        <label>Default BCC Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Default_OWEA_Id__c</fullName>
        <description>Default Email From-Address</description>
        <inlineHelpText>Default email from-address for this business unit in the email editor.</inlineHelpText>
        <label>Default Email From-Address</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Default_Email_Template__c</fullName>
        <inlineHelpText>The default Email Template used by the email editor for new emails.</inlineHelpText>
        <label>EC Default Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Default_Forward_Email_Template__c</fullName>
        <inlineHelpText>The default Email Template used by the email editor for forwarded emails.</inlineHelpText>
        <label>EC Default Forward Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Default_Reply_Email_Template__c</fullName>
        <inlineHelpText>The default Email Template used by the email editor for replied emails.</inlineHelpText>
        <label>EC Default Reply Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>User_From_Address_Allowed__c</fullName>
        <defaultValue>true</defaultValue>
        <description>User from address allowed</description>
        <inlineHelpText>If checked, current user&apos;s email from-address(es) will be available in the email editor for this business unit. If unchecked, current user&apos;s email from-address(es) will not be available.</inlineHelpText>
        <label>Allow User From-Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_URL__c</fullName>
        <label>Website URL</label>
        <type>Url</type>
    </fields>
    <label>e2a Business Unit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Allow_All_From_Addresses__c</columns>
        <columns>Allow_BCC_Deselect__c</columns>
        <columns>User_From_Address_Allowed__c</columns>
        <columns>Default_BCC_Address__c</columns>
        <columns>Default_OWEA_Id__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Business Unit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e2a Business Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>